# Moni

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .qovery.yml  Dockerfile  Dockerfile.dev.api  Dockerfile.dev.ui  Dockerfile.heroku  Makefile  Procfile  Procfile.real  README.md  docker-compose-dev.yml  docker-compose.dev.yml  docker-compose.yml  heroku.yml  requirements.txt
backend/: .env.example  dev-requirements.in  dev-requirements.txt  entrypoint.sh  manage.py  openapi-schema.yml  pyproject.toml  requirements.in  requirements.txt
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/controller/: jobs.py  serializers.py  urls.py  views.py
backend/jobs/: admin.py  apps.py  job_operations.py  models.py  notification.py  notify.py  operations.py  scheduler.py  serializers.py  signals.py  tests.py  urls.py  validators.py  views.py
backend/jobs/migrations/: 0001_initial.py  0002_alter_jobs_notifiers.py  0002_alter_jobs_uuid.py  0002_jobshistory_error.py  0003_alter_jobs_uuid.py  0003_auto_20210719_1546.py  0003_auto_20211031_1719.py  0004_auto_20210516_1120.py  0004_auto_20210728_0548.py  0004_jobs_healthy.py  0005_alter_jobs_uuid.py  0005_jobs_favicon_url.py  0006_auto_20210516_1142.py  0006_auto_20211205_0754.py  0007_alter_jobs_healthy.py  0007_auto_20210516_1414.py  0008_auto_20210516_1525.py  0008_jobs_failure_threshold.py  0009_auto_20210516_1525.py  0010_alter_jobs_uuid.py  0011_alter_jobs_uuid.py  0012_alter_jobs_uuid.py  0013_alter_jobs_uuid.py  0014_auto_20210606_1609.py  0015_remove_jobs_success_status.py  0016_jobs_success_status.py  0017_alter_jobs_success_status.py  0018_jobshistory.py  0019_jobs_headers.py  0020_jobshistory_response_time.py
backend/moni/: __init__.py  asgi.py  openapi-schema.yml  scheduler.py  settings.py  urls.py  views.py  wsgi.py
backend/moni/assets/templates/: redoc.html  swagger-ui.html
backend/moni/auth/: api_authentication.py
backend/moni/requests/: proxy.py  urls.py
backend/moni/templates/moni/: redoc.html  swagger-ui.html
backend/moni/utils/: api_authentication.py  favicon.py  funcs.py  requests_proxy.py  urls.py
backend/notification/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notification/migrations/: 0001_initial.py  0002_notifications_notificatio_uuid_d5968a_idx.py  0003_alter_notifications_type.py  0004_alter_notifications_type.py  0005_alter_notifications_type.py  0006_auto_20210807_1655.py  0007_notificationshistory_status.py
backend/notification/services/: notify.py
backend/notification/services/discord/: discord.py
backend/notification/services/gotify/: gotify.py
backend/notification/services/slack/: slack.py  template_service_down.json  template_service_up.json
backend/notification/services/webhook/: webhook.py
backend/notifications/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notifications/migrations/: 0001_initial.py  0002_alter_notifications_type.py
backend/notifications/services/: __init__.py  notify.py
backend/notifiers/: admin.py  apps.py  models.py  scheduler.py  serializers.py  urls.py  views.py
backend/notifiers/migrations/: 0001_initial.py  0002_alter_notifiershistory_uuid.py  0003_notifiers_title.py  0004_alter_notifiers_title.py  0005_auto_20211205_0754.py  0006_alter_notifiers_description.py  0007_notifiers_state.py
backend/notifiers/services/: __init__.py  notify.py
backend/scripts/: export.py  import.py
(+156 files in other folders)
