[project]
name = "Moni"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.0",
    "asgiref==3.9.1",
    "beautifulsoup4==4.13.4",
    "dj-database-url==3.0.1",
    "django==5.2.5",
    "django-apscheduler==0.7.0",
    "django-filter==25.1",
    "django-model-utils==5.0.0",
    "djangorestframework==3.16.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-writable-nested==0.7.2",
    "gunicorn==23.0.0",
    "markdown==3.8.2",
    "packaging==25.0",
    "psycopg2-binary==2.9.10",
    "python-decouple==3.8",
    "pytz==2025.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyyaml==6.0.2",
    "requests>=2.32.3",
    "six==1.17.0",
    "soupsieve==2.7",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.1",
    "tzdata==2025.2",
    "tzlocal==5.3.1",
    "urllib3==2.5.0",
    "whitenoise==6.9.0",
]

[dependency-groups]
dev = [
    "autopep8==2.3.2",
    "build==1.3.0",
    "click==8.2.1",
    "packaging==25.0",
    "pycodestyle==2.14.0",
    "pyproject-hooks==1.2.0",
    "pyyaml==6.0.2",
    "tomli==2.2.1",
    "uritemplate==4.2.0",
    "wheel==0.45.1",
]
