[project]
name = "Moni"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "apscheduler==3.11.3",
    "asgiref==3.11.1",
    "beautifulsoup4==4.15.0",
    "dj-database-url==3.1.2",
    "django==6.0.6",
    "django-apscheduler==0.7.0",
    "django-filter==25.2",
    "django-model-utils==5.0.0",
    "djangorestframework==3.17.1",
    "djangorestframework-simplejwt==5.5.1",
    "drf-writable-nested==0.7.2",
    "gunicorn==26.0.0",
    "markdown==3.10.2",
    "packaging==26.2",
    "psycopg2-binary==2.9.12",
    "python-decouple==3.8",
    "pytz==2026.2",
    "pytz-deprecation-shim==0.1.0.post0",
    "pyyaml==6.0.3",
    "requests>=2.34.2",
    "six==1.17.0",
    "soupsieve==2.8.4",
    "sqlparse==0.5.5",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "tzlocal==5.4.4",
    "urllib3==2.7.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "autopep8==2.3.2",
    "build==1.5.0",
    "click==8.4.2",
    "packaging==26.2",
    "pycodestyle==2.14.0",
    "pyproject-hooks==1.2.0",
    "pyyaml==6.0.3",
    "tomli==2.4.1",
    "uritemplate==4.2.0",
    "wheel==0.47.0",
]
